# ACCV-Lab

./: .gitmodules  CODE_OF_CONDUCT.md  README.md  genindex.html  guides_index.html  index.html  namespace_packages_config.py  objects.inv  py-modindex.html  release_notes_current.html  release_notes_page.html  release_notes_previous.html  search.html  searchindex.js
.github/workflows/: blossom-ci.yml
_downloads/5d523f34bd59be10ab39ae504b940060/: SampleSharedGopStore.py
_downloads/9c6d2dd30e172995ff9466799d6f77ed/: Dockerfile
_downloads/f3fdc89d3370f5ba5a18eac0d3ee3683/: SampleStreamAsyncAccess.py
_modules/: index.html
_modules/accvlab/: on_demand_video_decoder.html
_sources/: index.rst.txt
_sources/guides/: DOCUMENTATION_SETUP_GUIDE.md.txt  FORMATTING_GUIDE.md.txt
_sources/project_overview/: README.md.txt
_sources/release_notes/: 0_2_0.md.txt
_static/: documentation_options.js
build_config/: pyproject.toml  setup.py
build_config/accvlab_build_config/helpers/: __init__.py  build_utils.py  cmake_args.py
build_config/tests/: test_cuda_arch_selection.py
docker/: Dockerfile
docs/: Makefile  conf.py  index.rst  release_notes_current.md  release_notes_page.rst  release_notes_previous.rst  requirements.txt  spelling_wordlist.txt
docs/_ext/: namedtuple_attributes.py
guides/: CONTRIBUTION_GUIDE.html  DEVELOPMENT_GUIDE.html  DOCKER_GUIDE.html  DOCUMENTATION_SETUP_GUIDE.html  FORMATTING_GUIDE.html  INSTALLATION_GUIDE.html
project_overview/: README.html
release_notes/: 0_1_0.html  0_2_0.html
scripts/: package_manager.sh
(+160 files in other folders)
