[build-system]
requires = ["setuptools>=64", "wheel", "torch>=1.7.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "accvlab-build-config"
dynamic = ["version"]
description = "Build configuration utilities for ACCV-Lab packages"
requires-python = ">=3.7"
authors = [
    {name = "ACCV-Lab Team"}
]
dependencies = [
    "torch>=1.7.0",
    "setuptools-scm>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["accvlab_build_config*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"
root = ".."
